Πέτσα/2/myanalyzer.output
Terminals unused in grammar

    END_OF_FILE


State 41 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 282 conflicts: 3 reduce/reduce
State 284 conflicts: 3 reduce/reduce
State 290 conflicts: 1 shift/reduce
State 332 conflicts: 3 reduce/reduce
State 334 conflicts: 3 reduce/reduce
State 335 conflicts: 3 reduce/reduce
State 336 conflicts: 3 reduce/reduce
State 337 conflicts: 3 reduce/reduce
State 348 conflicts: 3 reduce/reduce
State 350 conflicts: 3 reduce/reduce
State 363 conflicts: 3 reduce/reduce
State 377 conflicts: 3 reduce/reduce


Grammar

    0 $accept: begin $end

    1 begin: programm main
    2      | main

    3 programm: external_declaration
    4         | programm external_declaration

    5 main: KW_DEF KW_MAIN LPARENTHESIS RPARENTHESIS DECLARE body KW_ENDDEF SEMICOLON

    6 external_declaration: var_declaration SEMICOLON
    7                     | function_declaration SEMICOLON

    8 body: %empty
    9     | body var_declaration SEMICOLON
   10     | body equation SEMICOLON
   11     | body operation SEMICOLON
   12     | body KW_RETURN operation SEMICOLON
   13     | body KW_RETURN SEMICOLON
   14     | body loop

   15 IDs: IDENTIFIER
   16    | IDs COMMA IDENTIFIER

   17 ARRAYIDs: IDENTIFIER LBRACKET operation RBRACKET
   18         | ARRAYIDs COMMA IDENTIFIER LBRACKET operation RBRACKET

   19 POINTERIDs: IDENTIFIER LBRACKET RBRACKET
   20           | POINTERIDs COMMA IDENTIFIER LBRACKET RBRACKET

   21 var_type: KW_INTEGER
   22         | KW_SCALAR
   23         | KW_STR
   24         | KW_BOOLEAN
   25         | IDENTIFIER

   26 var_declaration: IDs DECLARE var_type
   27                | ARRAYIDs DECLARE var_type
   28                | POINTERIDs DECLARE var_type
   29                | KW_CONST IDs ASSIGN operation DECLARE var_type
   30                | KW_CONST ARRAYIDs ASSIGN operation DECLARE var_type
   31                | KW_CONST POINTERIDs ASSIGN operation DECLARE var_type
   32                | KW_COMP IDENTIFIER DECLARE comp KW_ENDCOMP

   33 function_declaration: KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS LARROW var_type DECLARE body KW_ENDDEF
   34                     | KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS DECLARE body KW_ENDDEF

   35 comp: comp_variable_declaration SEMICOLON
   36     | comp_function_declaration SEMICOLON
   37     | comp comp_variable_declaration SEMICOLON
   38     | comp comp_function_declaration SEMICOLON

   39 comp_variable_declaration: compIDs DECLARE comp_var_type
   40                          | compARRAYIDs DECLARE comp_var_type
   41                          | compPOINTERIDs DECLARE comp_var_type
   42                          | KW_CONST compIDs ASSIGN operation DECLARE comp_var_type
   43                          | KW_CONST compARRAYIDs ASSIGN operation DECLARE comp_var_type
   44                          | KW_CONST compPOINTERIDs ASSIGN operation DECLARE comp_var_type
   45                          | IDs DECLARE var_type

   46 compIDs: HASHTAG IDENTIFIER
   47        | compIDs COMMA HASHTAG IDENTIFIER

   48 compARRAYIDs: HASHTAG IDENTIFIER LBRACKET operation RBRACKET
   49             | compARRAYIDs COMMA HASHTAG IDENTIFIER LBRACKET operation RBRACKET

   50 compPOINTERIDs: HASHTAG IDENTIFIER LBRACKET RBRACKET
   51               | compPOINTERIDs COMMA HASHTAG IDENTIFIER LBRACKET RBRACKET

   52 comp_function_declaration: KW_DEF IDENTIFIER LPARENTHESIS plus_arguments RPARENTHESIS LARROW var_type DECLARE compbody KW_ENDDEF
   53                          | KW_DEF IDENTIFIER LPARENTHESIS plus_arguments RPARENTHESIS DECLARE compbody KW_ENDDEF

   54 compbody: %empty
   55         | compbody comp_variable_declaration SEMICOLON
   56         | compbody equation SEMICOLON
   57         | compbody operation SEMICOLON
   58         | compbody KW_RETURN operation SEMICOLON
   59         | compbody KW_RETURN SEMICOLON
   60         | compbody comp_loop

   61 plus_arguments: %empty
   62               | comp_function_arguments

   63 comp_function_arguments: IDENTIFIER DECLARE var_type
   64                        | comp_function_arguments COMMA IDENTIFIER DECLARE var_type

   65 args: %empty
   66     | function_decl_arguments

   67 function_decl_arguments: var_declaration
   68                        | function_decl_arguments COMMA var_declaration

   69 function_arguments: %empty
   70                   | operation
   71                   | function_arguments COMMA operation

   72 function_call: IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS

   73 operation: ID_access
   74          | CONST_INT
   75          | CONST_SCALAR
   76          | function_call
   77          | KW_TRUE
   78          | KW_FALSE
   79          | CONST_STRING
   80          | LPARENTHESIS operation RPARENTHESIS
   81          | LBRACKET operation RBRACKET
   82          | operation POWER_OP operation
   83          | PLUS_OP operation
   84          | MINUS_OP operation
   85          | operation MULTIPLY_OP operation
   86          | operation DIVIDE_OP operation
   87          | operation MODULO_OP operation
   88          | operation PLUS_OP operation
   89          | operation MINUS_OP operation
   90          | operation EQ_SIGN operation
   91          | operation NOTEQ_SIGN operation
   92          | operation LT_SIGN operation
   93          | operation LTEQ_SIGN operation
   94          | operation GT_SIGN operation
   95          | operation GTEQ_SIGN operation
   96          | operation KW_OR operation
   97          | operation KW_AND operation
   98          | KW_NOT operation

   99 ID_access: IDENTIFIER
  100          | IDENTIFIER LBRACKET operation RBRACKET
  101          | IDENTIFIER ACCESS IDENTIFIER
  102          | IDENTIFIER ACCESS HASHTAG IDENTIFIER
  103          | IDENTIFIER ACCESS function_call
  104          | HASHTAG IDENTIFIER
  105          | HASHTAG IDENTIFIER LBRACKET operation RBRACKET
  106          | ID_access ACCESS IDENTIFIER
  107          | ID_access ACCESS HASHTAG IDENTIFIER
  108          | ID_access ACCESS IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS

  109 equation: ID_access ASSIGN operation
  110         | ID_access PLUS_ASSIGN operation
  111         | ID_access MINUS_ASSIGN operation
  112         | ID_access MULTIPLY_ASSIGN operation
  113         | ID_access DIVIDE_ASSIGN operation
  114         | ID_access MODULO_ASSIGN operation

  115 comp_var_type: KW_INTEGER
  116              | KW_SCALAR
  117              | KW_STR
  118              | KW_BOOLEAN
  119              | IDENTIFIER

  120 loop_body: %empty
  121          | loop_body KW_BREAK SEMICOLON
  122          | loop_body KW_CONTINUE SEMICOLON
  123          | body var_declaration SEMICOLON
  124          | body equation SEMICOLON
  125          | body operation SEMICOLON
  126          | body KW_RETURN operation SEMICOLON
  127          | body KW_RETURN SEMICOLON
  128          | loop_body loop

  129 comp_loop_body: %empty
  130               | comp_loop_body KW_BREAK SEMICOLON
  131               | comp_loop_body KW_CONTINUE SEMICOLON
  132               | comp_loop_body comp_variable_declaration SEMICOLON
  133               | comp_loop_body equation SEMICOLON
  134               | comp_loop_body operation SEMICOLON
  135               | comp_loop_body KW_RETURN operation SEMICOLON
  136               | comp_loop_body KW_RETURN SEMICOLON
  137               | comp_loop_body comp_loop

  138 if_statement: KW_IF LPARENTHESIS operation RPARENTHESIS DECLARE loop_body KW_ENDIF SEMICOLON
  139             | KW_IF LPARENTHESIS operation RPARENTHESIS DECLARE loop_body KW_ELSE DECLARE loop_body KW_ENDIF

  140 comp_if_statement: KW_IF LPARENTHESIS operation RPARENTHESIS DECLARE comp_loop_body KW_ENDIF SEMICOLON
  141                  | KW_IF LPARENTHESIS operation RPARENTHESIS DECLARE comp_loop_body KW_ELSE DECLARE loop_body KW_ENDIF

  142 for_loop: KW_FOR IDENTIFIER KW_IN LBRACKET operation DECLARE operation DECLARE operation RBRACKET DECLARE loop_body KW_ENDFOR SEMICOLON
  143         | KW_FOR IDENTIFIER KW_IN LBRACKET operation DECLARE operation RBRACKET DECLARE loop_body KW_ENDFOR SEMICOLON

  144 comp_for_loop: KW_FOR IDENTIFIER KW_IN LBRACKET operation DECLARE operation DECLARE operation RBRACKET DECLARE comp_loop_body KW_ENDFOR SEMICOLON
  145              | KW_FOR IDENTIFIER KW_IN LBRACKET operation DECLARE operation RBRACKET DECLARE comp_loop_body KW_ENDFOR SEMICOLON

  146 while_loop: KW_WHILE LPARENTHESIS operation RPARENTHESIS DECLARE loop_body KW_ENDWHILE SEMICOLON

  147 comp_while_loop: KW_WHILE LPARENTHESIS operation RPARENTHESIS DECLARE comp_loop_body KW_ENDWHILE SEMICOLON

  148 loop: if_statement
  149     | for_loop
  150     | while_loop

  151 comp_loop: comp_if_statement
  152          | comp_for_loop
  153          | comp_while_loop


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KW_INTEGER (258) 21 115
    KW_SCALAR (259) 22 116
    KW_STR (260) 23 117
    KW_BOOLEAN (261) 24 118
    KW_TRUE (262) 77
    KW_FALSE (263) 78
    KW_CONST (264) 29 30 31 42 43 44
    KW_IF (265) 138 139 140 141
    KW_ELSE (266) 139 141
    KW_ENDIF (267) 138 139 140 141
    KW_FOR (268) 142 143 144 145
    KW_IN (269) 142 143 144 145
    KW_ENDFOR (270) 142 143 144 145
    KW_WHILE (271) 146 147
    KW_ENDWHILE (272) 146 147
    KW_BREAK (273) 121 130
    KW_CONTINUE (274) 122 131
    KW_NOT (275) 98
    KW_AND (276) 97
    KW_OR (277) 96
    KW_DEF (278) 5 33 34 52 53
    KW_MAIN (279) 5
    KW_RETURN (280) 12 13 58 59 126 127 135 136
    KW_ENDDEF (281) 5 33 34 52 53
    KW_COMP (282) 32
    KW_ENDCOMP (283) 32
    IDENTIFIER <str> (284) 15 16 17 18 19 20 25 32 33 34 46 47 48 49 50 51 52 53 63 64 72 99 100 101 102 103 104 105 106 107 108 119 142 143 144 145
    CONST_INT <str> (285) 74
    CONST_SCALAR <str> (286) 75
    CONST_STRING <str> (287) 79
    PLUS_OP (288) 83 88
    MINUS_OP (289) 84 89
    MULTIPLY_OP (290) 85
    DIVIDE_OP (291) 86
    MODULO_OP (292) 87
    POWER_OP (293) 82
    EQ_SIGN (294) 90
    NOTEQ_SIGN (295) 91
    LT_SIGN (296) 92
    LTEQ_SIGN (297) 93
    GT_SIGN (298) 94
    GTEQ_SIGN (299) 95
    ASSIGN (300) 29 30 31 42 43 44 109
    COMMA (301) 16 18 20 47 49 51 64 68 71
    LBRACKET (302) 17 18 19 20 48 49 50 51 81 100 105 142 143 144 145
    RBRACKET (303) 17 18 19 20 48 49 50 51 81 100 105 142 143 144 145
    DECLARE (304) 5 26 27 28 29 30 31 32 33 34 39 40 41 42 43 44 45 52 53 63 64 138 139 140 141 142 143 144 145 146 147
    ACCESS (305) 101 102 103 106 107 108
    SEMICOLON (306) 5 6 7 9 10 11 12 13 35 36 37 38 55 56 57 58 59 121 122 123 124 125 126 127 130 131 132 133 134 135 136 138 140 142 143 144 145 146 147
    LPARENTHESIS (307) 5 33 34 52 53 72 80 108 138 139 140 141 146 147
    RPARENTHESIS (308) 5 33 34 52 53 72 80 108 138 139 140 141 146 147
    HASHTAG (309) 46 47 48 49 50 51 102 104 105 107
    LARROW (310) 33 52
    PLUS_ASSIGN (311) 110
    MINUS_ASSIGN (312) 111
    MULTIPLY_ASSIGN (313) 112
    DIVIDE_ASSIGN (314) 113
    MODULO_ASSIGN (315) 114
    END_OF_FILE (316)
    NEGATIVE (317)


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    begin (64)
        on left: 1 2
        on right: 0
    programm <str> (65)
        on left: 3 4
        on right: 1 4
    main <str> (66)
        on left: 5
        on right: 1 2
    external_declaration <str> (67)
        on left: 6 7
        on right: 3 4
    body <str> (68)
        on left: 8 9 10 11 12 13 14
        on right: 5 9 10 11 12 13 14 33 34 123 124 125 126 127
    IDs <str> (69)
        on left: 15 16
        on right: 16 26 29 45
    ARRAYIDs <str> (70)
        on left: 17 18
        on right: 18 27 30
    POINTERIDs <str> (71)
        on left: 19 20
        on right: 20 28 31
    var_type <str> (72)
        on left: 21 22 23 24 25
        on right: 26 27 28 29 30 31 33 45 52 63 64
    var_declaration <str> (73)
        on left: 26 27 28 29 30 31 32
        on right: 6 9 67 68 123
    function_declaration <str> (74)
        on left: 33 34
        on right: 7
    comp <str> (75)
        on left: 35 36 37 38
        on right: 32 37 38
    comp_variable_declaration <str> (76)
        on left: 39 40 41 42 43 44 45
        on right: 35 37 55 132
    compIDs <str> (77)
        on left: 46 47
        on right: 39 42 47
    compARRAYIDs <str> (78)
        on left: 48 49
        on right: 40 43 49
    compPOINTERIDs <str> (79)
        on left: 50 51
        on right: 41 44 51
    comp_function_declaration <str> (80)
        on left: 52 53
        on right: 36 38
    compbody <str> (81)
        on left: 54 55 56 57 58 59 60
        on right: 52 53 55 56 57 58 59 60
    plus_arguments <str> (82)
        on left: 61 62
        on right: 52 53
    comp_function_arguments <str> (83)
        on left: 63 64
        on right: 62 64
    args <str> (84)
        on left: 65 66
        on right: 33 34
    function_decl_arguments <str> (85)
        on left: 67 68
        on right: 66 68
    function_arguments <str> (86)
        on left: 69 70 71
        on right: 71 72 108
    function_call <str> (87)
        on left: 72
        on right: 76 103
    operation <str> (88)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 11 12 17 18 29 30 31 42 43 44 48 49 57 58 70 71 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 100 105 109 110 111 112 113 114 125 126 134 135 138 139 140 141 142 143 144 145 146 147
    ID_access <str> (89)
        on left: 99 100 101 102 103 104 105 106 107 108
        on right: 73 106 107 108 109 110 111 112 113 114
    equation <str> (90)
        on left: 109 110 111 112 113 114
        on right: 10 56 124 133
    comp_var_type <str> (91)
        on left: 115 116 117 118 119
        on right: 39 40 41 42 43 44
    loop_body <str> (92)
        on left: 120 121 122 123 124 125 126 127 128
        on right: 121 122 128 138 139 141 142 143 146
    comp_loop_body <str> (93)
        on left: 129 130 131 132 133 134 135 136 137
        on right: 130 131 132 133 134 135 136 137 140 141 144 145 147
    if_statement <str> (94)
        on left: 138 139
        on right: 148
    comp_if_statement <str> (95)
        on left: 140 141
        on right: 151
    for_loop <str> (96)
        on left: 142 143
        on right: 149
    comp_for_loop <str> (97)
        on left: 144 145
        on right: 152
    while_loop <str> (98)
        on left: 146
        on right: 150
    comp_while_loop <str> (99)
        on left: 147
        on right: 153
    loop <str> (100)
        on left: 148 149 150
        on right: 14 128
    comp_loop <str> (101)
        on left: 151 152 153
        on right: 60 137


State 0

    0 $accept: . begin $end
    1 begin: . programm main
    2      | . main
    3 programm: . external_declaration
    4         | . programm external_declaration
    5 main: . KW_DEF KW_MAIN LPARENTHESIS RPARENTHESIS DECLARE body KW_ENDDEF SEMICOLON
    6 external_declaration: . var_declaration SEMICOLON
    7                     | . function_declaration SEMICOLON
   15 IDs: . IDENTIFIER
   16    | . IDs COMMA IDENTIFIER
   17 ARRAYIDs: . IDENTIFIER LBRACKET operation RBRACKET
   18         | . ARRAYIDs COMMA IDENTIFIER LBRACKET operation RBRACKET
   19 POINTERIDs: . IDENTIFIER LBRACKET RBRACKET
   20           | . POINTERIDs COMMA IDENTIFIER LBRACKET RBRACKET
   26 var_declaration: . IDs DECLARE var_type
   27                | . ARRAYIDs DECLARE var_type
   28                | . POINTERIDs DECLARE var_type
   29                | . KW_CONST IDs ASSIGN operation DECLARE var_type
   30                | . KW_CONST ARRAYIDs ASSIGN operation DECLARE var_type
   31                | . KW_CONST POINTERIDs ASSIGN operation DECLARE var_type
   32                | . KW_COMP IDENTIFIER DECLARE comp KW_ENDCOMP
   33 function_declaration: . KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS LARROW var_type DECLARE body KW_ENDDEF
   34                     | . KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS DECLARE body KW_ENDDEF

    KW_CONST    shift, and go to state 1
    KW_DEF      shift, and go to state 2
    KW_COMP     shift, and go to state 3
    IDENTIFIER  shift, and go to state 4

    begin                 go to state 5
    programm              go to state 6
    main                  go to state 7
    external_declaration  go to state 8
    IDs                   go to state 9
    ARRAYIDs              go to state 10
    POINTERIDs            go to state 11
    var_declaration       go to state 12
    function_declaration  go to state 13


State 1

   15 IDs: . IDENTIFIER
   16    | . IDs COMMA IDENTIFIER
   17 ARRAYIDs: . IDENTIFIER LBRACKET operation RBRACKET
   18         | . ARRAYIDs COMMA IDENTIFIER LBRACKET operation RBRACKET
   19 POINTERIDs: . IDENTIFIER LBRACKET RBRACKET
   20           | . POINTERIDs COMMA IDENTIFIER LBRACKET RBRACKET
   29 var_declaration: KW_CONST . IDs ASSIGN operation DECLARE var_type
   30                | KW_CONST . ARRAYIDs ASSIGN operation DECLARE var_type
   31                | KW_CONST . POINTERIDs ASSIGN operation DECLARE var_type

    IDENTIFIER  shift, and go to state 4

    IDs         go to state 14
    ARRAYIDs    go to state 15
    POINTERIDs  go to state 16


State 2

    5 main: KW_DEF . KW_MAIN LPARENTHESIS RPARENTHESIS DECLARE body KW_ENDDEF SEMICOLON
   33 function_declaration: KW_DEF . IDENTIFIER LPARENTHESIS args RPARENTHESIS LARROW var_type DECLARE body KW_ENDDEF
   34                     | KW_DEF . IDENTIFIER LPARENTHESIS args RPARENTHESIS DECLARE body KW_ENDDEF

    KW_MAIN     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18


State 3

   32 var_declaration: KW_COMP . IDENTIFIER DECLARE comp KW_ENDCOMP

    IDENTIFIER  shift, and go to state 19


State 4

   15 IDs: IDENTIFIER .  [ASSIGN, COMMA, DECLARE]
   17 ARRAYIDs: IDENTIFIER . LBRACKET operation RBRACKET
   19 POINTERIDs: IDENTIFIER . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 20

    $default  reduce using rule 15 (IDs)


State 5

    0 $accept: begin . $end

    $end  shift, and go to state 21


State 6

    1 begin: programm . main
    4 programm: programm . external_declaration
    5 main: . KW_DEF KW_MAIN LPARENTHESIS RPARENTHESIS DECLARE body KW_ENDDEF SEMICOLON
    6 external_declaration: . var_declaration SEMICOLON
    7                     | . function_declaration SEMICOLON
   15 IDs: . IDENTIFIER
   16    | . IDs COMMA IDENTIFIER
   17 ARRAYIDs: . IDENTIFIER LBRACKET operation RBRACKET
   18         | . ARRAYIDs COMMA IDENTIFIER LBRACKET operation RBRACKET
   19 POINTERIDs: . IDENTIFIER LBRACKET RBRACKET
   20           | . POINTERIDs COMMA IDENTIFIER LBRACKET RBRACKET
   26 var_declaration: . IDs DECLARE var_type
   27                | . ARRAYIDs DECLARE var_type
   28                | . POINTERIDs DECLARE var_type
   29                | . KW_CONST IDs ASSIGN operation DECLARE var_type
   30                | . KW_CONST ARRAYIDs ASSIGN operation DECLARE var_type
   31                | . KW_CONST POINTERIDs ASSIGN operation DECLARE var_type
   32                | . KW_COMP IDENTIFIER DECLARE comp KW_ENDCOMP
   33 function_declaration: . KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS LARROW var_type DECLARE body KW_ENDDEF
   34                     | . KW_DEF IDENTIFIER LPARENTHESIS args RPARENTHESIS DECLARE body KW_ENDDEF

    KW_CONST    shift, and go to state 1
    KW_DEF      shift, and go to state 2
    KW_COMP     shift, and go to state 3
    IDENTIFIER  shift, and go to state 4

    main                  go to state 22
    external_declaration  go to state 23
    IDs                   go to state 9
    ARRAYIDs              go to state 10
    POINTERIDs            go to state 11
    var_declaration       go to state 12
    function_declaration  go to state 13


State 7

    2 begin: main .

    $default  reduce using rule 2 (begin)


State 8

    3 programm: external_declaration .

    $default  reduce using rule 3 (programm)


State 9

   16 IDs: IDs . COMMA IDENTIFIER
   26 var_declaration: IDs . DECLARE var_type

    COMMA    shift, and go to state 24
    DECLARE  shift, and go to state 25


State 10

   18 ARRAYIDs: ARRAYIDs . COMMA IDENTIFIER LBRACKET operation RBRACKET
   27 var_declaration: ARRAYIDs . DECLARE var_type

    COMMA    shift, and go to state 26
    DECLARE  shift, and go to state 27


State 11

   20 POINTERIDs: POINTERIDs . COMMA IDENTIFIER LBRACKET RBRACKET
   28 var_declaration: POINTERIDs . DECLARE var_type

    COMMA    shift, and go to state 28
    DECLARE  shift, and go to state 29


State 12

    6 external_declaration: var_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 30


State 13

    7 external_declaration: function_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 31


State 14

   16 IDs: IDs . COMMA IDENTIFIER
   29 var_declaration: KW_CONST IDs . ASSIGN operation DECLARE var_type

    ASSIGN  shift, and go to state 32
    COMMA   shift, and go to state 24


State 15

   18 ARRAYIDs: ARRAYIDs . COMMA IDENTIFIER LBRACKET operation RBRACKET
   30 var_declaration: KW_CONST ARRAYIDs . ASSIGN operation DECLARE var_type

    ASSIGN  shift, and go to state 33
    COMMA   shift, and go to state 26


State 16

   20 POINTERIDs: POINTERIDs . COMMA IDENTIFIER LBRACKET RBRACKET
   31 var_declaration: KW_CONST POINTERIDs . ASSIGN operation DECLARE var_type

    ASSIGN  shift, and go to state 34
    COMMA   shift, and go to state 28


State 17

    5 main: KW_DEF KW_MAIN . LPARENTHESIS RPARENTHESIS DECLARE body KW_ENDDEF SEMICOLON

    LPARENTHESIS  shift, and go to state 35


State 18

   33 function_declaration: KW_DEF IDENTIFIER . LPARENTHESIS args RPARENTHESIS LARROW var_type DECLARE body KW_ENDDEF
   34                     | KW_DEF IDENTIFIER . LPARENTHESIS args RPARENTHESIS DECLARE body KW_ENDDEF

    LPARENTHESIS  shift, and go to state 36


State 19

   32 var_declaration: KW_COMP IDENTIFIER . DECLARE comp KW_ENDCOMP

    DECLARE  shift, and go to state 37


State 20

   17 ARRAYIDs: IDENTIFIER LBRACKET . operation RBRACKET
   19 POINTERIDs: IDENTIFIER LBRACKET . RBRACKET
   72 function_call: . IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS
   73 operation: . ID_access
   74          | . CONST_INT
   75          | . CONST_SCALAR
   76          | . function_call
   77          | . KW_TRUE
   78          | . KW_FALSE
   79          | . CONST_STRING
   80          | . LPARENTHESIS operation RPARENTHESIS
   81          | . LBRACKET operation RBRACKET
   82          | . operation POWER_OP operation
   83          | . PLUS_OP operation
   84          | . MINUS_OP operation
   85          | . operation MULTIPLY_OP operation
   86          | . operation DIVIDE_OP operation
   87          | . operation MODULO_OP operation
   88          | . operation PLUS_OP operation
   89          | . operation MINUS_OP operation
   90          | . operation EQ_SIGN operation
   91          | . operation NOTEQ_SIGN operation
   92          | . operation LT_SIGN operation
   93          | . operation LTEQ_SIGN operation
   94          | . operation GT_SIGN operation
   95          | . operation GTEQ_SIGN operation
   96          | . operation KW_OR operation
   97          | . operation KW_AND operation
   98          | . KW_NOT operation
   99 ID_access: . IDENTIFIER
  100          | . IDENTIFIER LBRACKET operation RBRACKET
  101          | . IDENTIFIER ACCESS IDENTIFIER
  102          | . IDENTIFIER ACCESS HASHTAG IDENTIFIER
  103          | . IDENTIFIER ACCESS function_call
  104          | . HASHTAG IDENTIFIER
  105          | . HASHTAG IDENTIFIER LBRACKET operation RBRACKET
  106          | . ID_access ACCESS IDENTIFIER
  107          | . ID_access ACCESS HASHTAG IDENTIFIER
  108          | . ID_access ACCESS IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS

    KW_TRUE       shift, and go to state 38
    KW_FALSE      shift, and go to state 39
    KW_NOT        shift, and go to state 40
    IDENTIFIER    shift, and go to state 41
    CONST_INT     shift, and go to state 42
    CONST_SCALAR  shift, and go to state 43
    CONST_STRING  shift, and go to state 44
    PLUS_OP       shift, and go to state 45
    MINUS_OP      shift, and go to state 46
    LBRACKET      shift, and go to state 47
    RBRACKET      shift, and go to state 48
    LPARENTHESIS  shift, and go to state 49
    HASHTAG       shift, and go to state 50

    function_call  go to state 51
    operation      go to state 52
    ID_access      go to state 53


State 21

    0 $accept: begin $end .

    $default  accept


State 22

    1 begin: programm main .

    $default  reduce using rule 1 (begin)


State 23

    4 programm: programm external_declaration .

    $default  reduce using rule 4 (programm)


State 24

   16 IDs: IDs COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 25

   21 var_type: . KW_INTEGER
   22         | . KW_SCALAR
   23         | . KW_STR
   24         | . KW_BOOLEAN
   25         | . IDENTIFIER
   26 var_declaration: IDs DECLARE . var_type

    KW_INTEGER  shift, and go to state 55
    KW_SCALAR   shift, and go to state 56
    KW_STR      shift, and go to state 57
    KW_BOOLEAN  shift, and go to state 58
    IDENTIFIER  shift, and go to state 59

    var_type  go to state 60


State 26

   18 ARRAYIDs: ARRAYIDs COMMA . IDENTIFIER LBRACKET operation RBRACKET

    IDENTIFIER  shift, and go to state 61


State 27

   21 var_type: . KW_INTEGER
   22         | . KW_SCALAR
   23         | . KW_STR
   24         | . KW_BOOLEAN
   25         | . IDENTIFIER
   27 var_declaration: ARRAYIDs DECLARE . var_type

    KW_INTEGER  shift, and go to state 55
    KW_SCALAR   shift, and go to state 56
    KW_STR      shift, and go to state 57
    KW_BOOLEAN  shift, and go to state 58
    IDENTIFIER  shift, and go to state 59

    var_type  go to state 62


State 28

   20 POINTERIDs: POINTERIDs COMMA . IDENTIFIER LBRACKET RBRACKET

    IDENTIFIER  shift, and go to state 63


State 29

   21 var_type: . KW_INTEGER
   22         | . KW_SCALAR
   23         | . KW_STR
   24         | . KW_BOOLEAN
   25         | . IDENTIFIER
   28 var_declaration: POINTERIDs DECLARE . var_type

    KW_INTEGER  shift, and go to state 55
    KW_SCALAR   shift, and go to state 56
    KW_STR      shift, and go to state 57
    KW_BOOLEAN  shift, and go to state 58
    IDENTIFIER  shift, and go to state 59

    var_type  go to state 64


State 30

    6 external_declaration: var_declaration SEMICOLON .

    $default  reduce using rule 6 (external_declaration)


State 31

    7 external_declaration: function_declaration SEMICOLON .

    $default  reduce using rule 7 (external_declaration)


State 32

   29 var_declaration: KW_CONST IDs ASSIGN . operation DECLARE var_type
   72 function_call: . IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS
   73 operation: . ID_access
   74          | . CONST_INT
   75          | . CONST_SCALAR
   76          | . function_call
   77          | . KW_TRUE
   78          | . KW_FALSE
   79          | . CONST_STRING
   80          | . LPARENTHESIS operation RPARENTHESIS
   81          | . LBRACKET operation RBRACKET
   82          | . operation POWER_OP operation
   83          | . PLUS_OP operation
   84          | . MINUS_OP operation
   85          | . operation MULTIPLY_OP operation
   86          | . operation DIVIDE_OP operation
   87          | . operation MODULO_OP operation
   88          | . operation PLUS_OP operation
   89          | . operation MINUS_OP operation
   90          | . operation EQ_SIGN operation
   91          | . operation NOTEQ_SIGN operation
   92          | . operation LT_SIGN operation
   93          | . operation LTEQ_SIGN operation
   94          | . operation GT_SIGN operation
   95          | . operation GTEQ_SIGN operation
   96          | . operation KW_OR operation
   97          | . operation KW_AND operation
   98          | . KW_NOT operation
   99 ID_access: . IDENTIFIER
  100          | . IDENTIFIER LBRACKET operation RBRACKET
  101          | . IDENTIFIER ACCESS IDENTIFIER
  102          | . IDENTIFIER ACCESS HASHTAG IDENTIFIER
  103          | . IDENTIFIER ACCESS function_call
  104          | . HASHTAG IDENTIFIER
  105          | . HASHTAG IDENTIFIER LBRACKET operation RBRACKET
  106          | . ID_access ACCESS IDENTIFIER
  107          | . ID_access ACCESS HASHTAG IDENTIFIER
  108          | . ID_access ACCESS IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS

    KW_TRUE       shift, and go to state 38
    KW_FALSE      shift, and go to state 39
    KW_NOT        shift, and go to state 40
    IDENTIFIER    shift, and go to state 41
    CONST_INT     shift, and go to state 42
    CONST_SCALAR  shift, and go to state 43
    CONST_STRING  shift, and go to state 44
    PLUS_OP       shift, and go to state 45
    MINUS_OP      shift, and go to state 46
    LBRACKET      shift, and go to state 47
    LPARENTHESIS  shift, and go to state 49
    HASHTAG       shift, and go to state 50

    function_call  go to state 51
    operation      go to state 65
    ID_access      go to state 53


State 33

   30 var_declaration: KW_CONST ARRAYIDs ASSIGN . operation DECLARE var_type
   72 function_call: . IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS
   73 operation: . ID_access
   74          | . CONST_INT
   75          | . CONST_SCALAR
   76          | . function_call
   77          | . KW_TRUE
   78          | . KW_FALSE
   79          | . CONST_STRING
   80          | . LPARENTHESIS operation RPARENTHESIS
   81          | . LBRACKET operation RBRACKET
   82          | . operation POWER_OP operation
   83          | . PLUS_OP operation
   84          | . MINUS_OP operation
   85          | . operation MULTIPLY_OP operation
   86          | . operation DIVIDE_OP operation
   87          | . operation MODULO_OP operation
   88          | . operation PLUS_OP operation
   89          | . operation MINUS_OP operation
   90          | . operation EQ_SIGN operation
   91          | . operation NOTEQ_SIGN operation
   92          | . operation LT_SIGN operation
   93          | . operation LTEQ_SIGN operation
   94          | . operation GT_SIGN operation
   95          | . operation GTEQ_SIGN operation
   96          | . operation KW_OR operation
   97          | . operation KW_AND operation
   98          | . KW_NOT operation
   99 ID_access: . IDENTIFIER
  100          | . IDENTIFIER LBRACKET operation RBRACKET
  101          | . IDENTIFIER ACCESS IDENTIFIER
  102          | . IDENTIFIER ACCESS HASHTAG IDENTIFIER
  103          | . IDENTIFIER ACCESS function_call
  104          | . HASHTAG IDENTIFIER
  105          | . HASHTAG IDENTIFIER LBRACKET operation RBRACKET
  106          | . ID_access ACCESS IDENTIFIER
  107          | . ID_access ACCESS HASHTAG IDENTIFIER
  108          | . ID_access ACCESS IDENTIFIER LPARENTHESIS function_arguments RPARENTHESIS

    KW_TRUE       shift, and go to state 38
    KW_FALSE      shift, and go to state 39
    KW_NOT        shift, and go to state 40
    IDENTIFIER    shift, and go to state 41
    CONST_INT     shift, and go to state 42
    CONST_SCALAR  shift, and go to state 43
    CONST_STRING  shift, and go to state 44
    PLUS_OP       shift, and go to state 45
    MINUS_OP      shift, and go to state 46
    LBRACKET      shift, and go to state 47
    LPARENTHESIS  shift, and go to state 49
    HASHTAG       shift, and go to state 50

    function_call  go to state 51
    operation      go to state 66
    ID_access      go to state 53


State 34
